--- a/anfrage.html
+++ b/anfrage.html
@@ -20,7 +20,10 @@ input, button {
   border: none;
   font-size: 16px;
 }
-input { width: 200px; text-align: center; }
+input {
+  width: 200px;
+  text-align: center;
+}
 button {
   background-color: #3b82f6;
   color: white;
@@ -38,7 +41,6 @@ button:hover { background-color: #2563eb; }
 </style>
 </head>
 <body>
-
 <button id="langBtn">🇩🇪 Deutsch</button>
 <h1 id="title">📨 Anfrage senden</h1>
 <p id="desc">Gib deinen Namen ein, um eine Anfrage zu stellen:</p>
@@ -48,9 +50,9 @@ button:hover { background-color: #2563eb; }
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-import { getDatabase, ref, push, set, get, query, orderByChild, equalTo, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+import { getDatabase, ref, push, set, onValue, get, query, orderByChild, equalTo } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
-// 🔹 Firebase konfigurieren
+// 🔹 Firebase Einstellungen
 const firebaseConfig = {
   apiKey: "AIzaSyBSDffrKz3_AE_iuwOLuZNB0yWLStMysSI",
   authDomain: "zahlenerraten.firebaseapp.com",
@@ -65,7 +67,7 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 
-// 🔹 Elemente
+// 🔹 HTML-Elemente
 const title = document.getElementById("title");
 const desc = document.getElementById("desc");
 const nameInput = document.getElementById("nameInput");
@@ -73,10 +75,8 @@ const sendBtn = document.getElementById("sendBtn");
 const status = document.getElementById("status");
 const langBtn = document.getElementById("langBtn");
 
+// 🔹 Sprachen
 let lang = "de";
-let currentRequestId = null;
-
-// 🔹 Texte
 const texts = {
   de: {
     title: "📨 Anfrage senden",
@@ -85,7 +85,7 @@ const texts = {
     send: "Anfrage senden",
     sending: "⏳ Anfrage wird gesendet...",
     sent: "✅ Anfrage wurde gesendet! Warte auf Antwort...",
-    accepted: (url) => `✅ Deine Anfrage wurde akzeptiert!<br><a href="${url}" target="_blank" style="color:#38bdf8;">Hier klicken, um das Passwort zu sehen 🔑</a>`,
+    accepted: (url) => `✅ Anfrage akzeptiert!<br><a href="${url}" target="_blank" style="color:#38bdf8;">Hier klicken 🔑</a>`,
     declined: "❌ Deine Anfrage wurde abgelehnt!",
     exists: "⚠️ Du hast bereits eine offene Anfrage!",
     invalid: "⚠️ Bitte gib deinen Namen ein!",
@@ -97,30 +97,27 @@ const texts = {
     placeholder: "Your name",
     send: "Send Request",
     sending: "⏳ Sending request...",
-    sent: "✅ Request sent! Please wait for a response...",
-    accepted: (url) => `✅ Your request has been accepted!<br><a href="${url}" target="_blank" style="color:#38bdf8;">Click here to view the password 🔑</a>`,
-    declined: "❌ Your request was declined!",
+    sent: "✅ Request sent! Waiting for response...",
+    accepted: (url) => `✅ Request accepted!<br><a href="${url}" target="_blank" style="color:#38bdf8;">Click here 🔑</a>`,
+    declined: "❌ Request declined!",
     exists: "⚠️ You already have a pending request!",
     invalid: "⚠️ Please enter your name!",
     error: "❌ Could not save request!"
   }
 };
 
-// 🔹 Sprachumschalter
+// 🔹 Sprache wechseln
 langBtn.onclick = () => {
   lang = lang === "de" ? "en" : "de";
   langBtn.textContent = lang === "de" ? "🇩🇪 Deutsch" : "🇬🇧 English";
-  applyLang();
-};
-
-function applyLang() {
   title.textContent = texts[lang].title;
   desc.textContent = texts[lang].desc;
   nameInput.placeholder = texts[lang].placeholder;
   sendBtn.textContent = texts[lang].send;
-}
+};
+langBtn.click(); // Sprache initialisieren
 
-// 🔹 Prüft ob schon offene Anfrage existiert
+// 🔹 Prüfen, ob schon offene Anfrage existiert
 async function checkExisting(name) {
   const q = query(ref(db, "requests"), orderByChild("name"), equalTo(name));
   const snap = await get(q);
@@ -132,16 +129,13 @@ async function checkExisting(name) {
   return found;
 }
 
-// 🔹 Anfrage senden
+// 🔹 Anfrage absenden
 sendBtn.onclick = async () => {
   const name = nameInput.value.trim();
-  if (!name) {
-    status.textContent = texts[lang].invalid;
-    return;
-  }
+  if (!name) return status.textContent = texts[lang].invalid;
 
-  status.textContent = texts[lang].sending;
   sendBtn.disabled = true;
+  status.textContent = texts[lang].sending;
 
   try {
     const existing = await checkExisting(name);
@@ -151,39 +145,32 @@ sendBtn.onclick = async () => {
       return;
     }
 
-    const newReq = push(ref(db, "requests"));
-    await set(newReq, { name, status: "offen" });
-    currentRequestId = newReq.key;
-    status.textContent = texts[lang].sent;
-    console.log("✅ Anfrage gespeichert:", currentRequestId);
+    const newRef = push(ref(db, "requests"));
+    await set(newRef, { name, status: "offen", timestamp: Date.now() });
 
-    // Live-Update überwachen
-    onValue(ref(db, "requests/" + currentRequestId), async (snap) => {
+    status.textContent = texts[lang].sent;
+    nameInput.style.display = "none";
+    sendBtn.style.display = "none";
+
+    // Live auf Statusänderung hören
+    onValue(ref(db, "requests/" + newRef.key), async (snap) => {
       if (!snap.exists()) return;
       const data = snap.val();
       if (data.status === "akzeptiert") {
-        const urlSnap = await get(ref(db, "settings/linkURL"));
-        const url = urlSnap.exists() ? urlSnap.val() : "#";
+        const settingsSnap = await get(ref(db, "settings/linkURL"));
+        const url = settingsSnap.exists() ? settingsSnap.val() : "#";
         status.innerHTML = texts[lang].accepted(url);
-        sendBtn.style.display = "none";
-        nameInput.style.display = "none";
       } else if (data.status === "abgelehnt") {
         status.textContent = texts[lang].declined;
-        sendBtn.style.display = "none";
-        nameInput.style.display = "none";
       }
     });
 
   } catch (err) {
-    console.error("❌ Fehler beim Speichern:", err);
+    console.error("Fehler beim Speichern:", err);
     status.textContent = texts[lang].error;
     sendBtn.disabled = false;
   }
 };
-
-// Sprache direkt anwenden
-applyLang();
-
 </script>
 </body>
 </html>
