anfrage.html aktualisieren

--- a/anfrage.html
+++ b/anfrage.html
@@ -56,7 +56,7 @@ import { getDatabase, ref, push, set, onValue, get, query, orderByChild, equalTo
 const firebaseConfig = {
   apiKey: "AIzaSyBSDffrKz3_AE_iuwOLuZNB0yWLStMysSI",
   authDomain: "zahlenerraten.firebaseapp.com",
-  databaseURL: "https://zahlenerraten-default-rtdb.europe-west1.firebasedatabase.app",
+  databaseURL: "https://zahlenerraten-default-rtdb.europe-west1.firebasedatabase.app/",
   projectId: "zahlenerraten",
   storageBucket: "zahlenerraten.firebasestorage.app",
   messagingSenderId: "143969932071",
