--- a/index.html
+++ b/index.html
@@ -5,43 +5,18 @@
 <title>Zahlen-Rätsel 🧩</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {
-  font-family: Arial;
-  background: #0f172a;
-  color: #fff;
-  text-align: center;
-  padding: 40px;
-}
+body { font-family: Arial; background: #0f172a; color: #fff; text-align: center; padding: 40px; }
 h1 { color: #38bdf8; }
-input, button {
-  padding: 10px;
-  margin: 8px;
-  border-radius: 8px;
-  border: none;
-  font-size: 16px;
-}
+input, button { padding: 10px; margin: 8px; border-radius: 8px; border: none; font-size: 16px; }
 input { width: 80px; text-align: center; }
-button {
-  background-color: #3b82f6;
-  color: #fff;
-  cursor: pointer;
-}
+button { background-color: #3b82f6; color: #fff; cursor: pointer; }
 button:hover { background-color: #2563eb; }
-#info, #hint, #result {
-  margin-top: 15px;
-  font-size: 18px;
-}
-#langBtn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  background: #1e293b;
-  color: white;
-  border-radius: 8px;
-}
+#info, #hint, #result { margin-top: 15px; font-size: 18px; }
+#langBtn { position: absolute; top: 10px; right: 15px; background: #1e293b; color: white; border-radius: 8px; }
 </style>
 </head>
 <body>
+
 <button id="langBtn">🇩🇪 Deutsch</button>
 <h1 id="title">🔢 Zahlen erraten</h1>
 <p id="rangeText">Lade Einstellungen...</p>
@@ -52,6 +27,11 @@ button:hover { background-color: #2563eb; }
 <p id="result"></p>
 
 <script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+import { getDatabase, ref, get, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+
+document.addEventListener("DOMContentLoaded", () => {
+
 const firebaseConfig = {
   apiKey: "AIzaSyBSDffrKz3_AE_iuwOLuZNB0yWLStMysSI",
   authDomain: "zahlenerraten.firebaseapp.com",
@@ -59,16 +39,13 @@ const firebaseConfig = {
   projectId: "zahlenerraten",
   storageBucket: "zahlenerraten.firebasestorage.app",
   messagingSenderId: "143969932071",
-  appId: "1:143969932071:web:850baabab3f9c0f2de0f02",
-  measurementId: "G-KP89LYZJMT"
+  appId: "1:143969932071:web:850baabab3f9c0f2de0f02"
 };
-
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-import { getDatabase, ref, get, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 
+// HTML-Elemente
 const guessInput = document.getElementById("guess");
 const guessBtn = document.getElementById("guessBtn");
 const info = document.getElementById("info");
@@ -83,14 +60,14 @@ let settings = {};
 let currentNumber = 0;
 let attemptsLeft = 0;
 
-// 🗣 Sprachtexte
+// Texte
 const texts = {
   de: {
     title: "🔢 Zahlen erraten",
     placeholder: "Zahl",
     guessBtn: "Raten",
     loading: "Lade Einstellungen...",
-    range: (min, max) => `Errate die Zahl zwischen ${min} und ${max}`,
+    range: (min,max) => `Errate die Zahl zwischen ${min} und ${max}`,
     tooHigh: "📉 Zu hoch!",
     tooLow: "📈 Zu niedrig!",
     wrong: "❌ Falsch! Versuch es nochmal!",
@@ -104,7 +81,7 @@ const texts = {
     placeholder: "Number",
     guessBtn: "Guess",
     loading: "Loading settings...",
-    range: (min, max) => `Guess the number between ${min} and ${max}`,
+    range: (min,max) => `Guess the number between ${min} and ${max}`,
     tooHigh: "📉 Too high!",
     tooLow: "📈 Too low!",
     wrong: "❌ Wrong! Try again!",
@@ -115,111 +92,84 @@ const texts = {
   }
 };
 
-// 🟦 Sprachumschalter
+// Sprachumschalter
 langBtn.onclick = () => {
   lang = lang === "de" ? "en" : "de";
   langBtn.textContent = lang === "de" ? "🇩🇪 Deutsch" : "🇬🇧 English";
   applyLanguage();
 };
 
-function applyLanguage() {
+function applyLanguage(){
   title.textContent = texts[lang].title;
   guessInput.placeholder = texts[lang].placeholder;
   guessBtn.textContent = texts[lang].guessBtn;
-  if (settings.minNumber) {
-    rangeText.textContent = texts[lang].range(settings.minNumber, settings.maxNumber);
-  } else {
-    rangeText.textContent = texts[lang].loading;
-  }
+  if(settings.minNumber) rangeText.textContent = texts[lang].range(settings.minNumber, settings.maxNumber);
+  else rangeText.textContent = texts[lang].loading;
 }
 
-// 🔹 Einstellungen laden
-async function loadSettings() {
+// Einstellungen laden
+async function loadSettings(){
   const snapshot = await get(ref(db, "settings"));
-  if (snapshot.exists()) {
+  if(snapshot.exists()){
     settings = snapshot.val();
     applyLanguage();
     resetGame();
-  } else {
-    rangeText.textContent = texts[lang].loading;
-  }
+  } else rangeText.textContent = texts[lang].loading;
 }
 
-// 🔹 Neue Runde
-function resetGame() {
+// Neue Runde
+function resetGame(){
   const min = settings.minNumber || 1;
   const max = settings.maxNumber || 50;
   const isRandom = settings.randomNumber;
-  currentNumber = isRandom
-    ? Math.floor(Math.random() * (max - min + 1)) + min
-    : Number(settings.fixedNumber) || 10;
-  attemptsLeft = settings.maxAttempts || 5;
+  currentNumber = isRandom ? Math.floor(Math.random()*(max-min+1))+min : Number(settings.fixedNumber)||10;
+  attemptsLeft = settings.maxAttempts||5;
   info.textContent = texts[lang].triesLeft(attemptsLeft);
   hint.textContent = "";
   result.textContent = "";
-  guessInput.disabled = false;
-  guessBtn.disabled = false;
+  guessInput.disabled=false; guessBtn.disabled=false;
 }
 
-// 🔹 Rateversuch
+// Rateversuch
 guessBtn.onclick = () => {
   const guess = Number(guessInput.value);
-  if (!guess) {
-    hint.textContent = texts[lang].invalid;
-    return;
-  }
-
+  if(!guess){ hint.textContent=texts[lang].invalid; return; }
   attemptsLeft--;
-  const isRandom = settings.randomNumber;
-
-  if (guess === currentNumber) {
-    result.textContent = texts[lang].correct;
-    setTimeout(() => window.location.href = "anfrage.html", 1000);
-    guessInput.disabled = true;
-    guessBtn.disabled = true;
+  const isRandom=settings.randomNumber;
+  if(guess===currentNumber){
+    result.textContent=texts[lang].correct;
+    setTimeout(()=>window.location.href="anfrage.html",1000);
+    guessInput.disabled=true; guessBtn.disabled=true;
     return;
   }
-
-  if (attemptsLeft <= 0) {
-    result.textContent = texts[lang].noTries(currentNumber);
-    guessInput.disabled = true;
-    guessBtn.disabled = true;
+  if(attemptsLeft<=0){
+    result.textContent=texts[lang].noTries(currentNumber);
+    guessInput.disabled=true; guessBtn.disabled=true;
     return;
   }
-
-  hint.textContent = isRandom
-    ? texts[lang].wrong
-    : (guess > currentNumber ? texts[lang].tooHigh : texts[lang].tooLow);
-
-  info.textContent = texts[lang].triesLeft(attemptsLeft);
-
-  if (isRandom) {
-    const min = settings.minNumber || 1;
-    const max = settings.maxNumber || 50;
-    currentNumber = Math.floor(Math.random() * (max - min + 1)) + min;
+  hint.textContent=isRandom?texts[lang].wrong:(guess>currentNumber?texts[lang].tooHigh:texts[lang].tooLow);
+  info.textContent=texts[lang].triesLeft(attemptsLeft);
+  if(isRandom){
+    const min=settings.minNumber||1;
+    const max=settings.maxNumber||50;
+    currentNumber=Math.floor(Math.random()*(max-min+1))+min;
   }
 }
 
-// 🔹 Reload Listener (sicher)
+// Reload Listener
 const reloadRef = ref(db, "reloadFlag/time");
-let firstLoad = true;
-onValue(reloadRef, (snap) => {
-  if (!snap.exists()) return;
-  const newTime = snap.val();
-  const lastReload = localStorage.getItem("lastReloadTime");
-  if (firstLoad) {
-    firstLoad = false;
-    localStorage.setItem("lastReloadTime", newTime);
-    return;
-  }
-  if (newTime && newTime !== lastReload) {
-    localStorage.setItem("lastReloadTime", newTime);
-    location.reload();
-  }
+let firstLoad=true;
+onValue(reloadRef,(snap)=>{
+  if(!snap.exists()) return;
+  const newTime=snap.val();
+  const lastReload=localStorage.getItem("lastReloadTime");
+  if(firstLoad){ firstLoad=false; localStorage.setItem("lastReloadTime",newTime); return; }
+  if(newTime && newTime!==lastReload){ localStorage.setItem("lastReloadTime",newTime); location.reload(); }
 });
 
-// Start
 loadSettings();
+
+});
 </script>
 </body>
 </html>
